# 2026-world-cup-predictions

./: .gitignore  README.md  predictions.md  program.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
artifacts/: autoresearch.tsv  metrics.json  model.joblib  prediction_log.tsv  training_history.tsv
scripts/: auto_research.py  chart_training_progress.py  cleanup_linux.sh  cleanup_windows.ps1  download_data.py  install_linux.sh  install_windows.ps1  run_experiment.py  train_model.py
src/worldcup_predictor/: __init__.py  app.py  data.py  evaluation.py  features.py  model.py  predictor.py
static/: app.js  index.html  styles.css
tests/: test_api.py  test_data.py  test_features.py
