[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worldcup-predictor"
version = "0.1.0"
description = "World Cup and international soccer match outcome predictor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "joblib>=1.4",
    "pydantic>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "B",
    "D",
    "E",
    "F",
    "I",
    "N",
    "RUF",
    "SIM",
    "UP",
]
ignore = [
    "D203",
    "D213",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"scripts/chart_training_progress.py" = ["D", "E501"]
"scripts/**/*.py" = ["D"]
"tests/**/*.py" = ["D"]
